Añadido modulo Customer
Se creo el modulo customer con user como base(servicio, controlador, rutas, validadores, documentación, test unitarios, test e2e)
