# src/api/controllers/customer-controller.js
@@ -23,9 +23,30 @@ const CustomerController = (customerService) => {
     }
   };
 
+  const addAddress = async (req, res, next) => {
+    try {
+      const updatedProfile = await customerService.addAddress(req.user.id, req.body);
+      return sendResponse(res, 201, updatedProfile, "Dirección agregada correctamente.");
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  const removeAddress = async (req, res, next) => {
+    try {
+      const { addressId } = req.params;
+      const updatedProfile = await customerService.removeAddress(req.user.id, addressId);
+      return sendResponse(res, 200, updatedProfile, "Dirección eliminada correctamente.");
+    } catch (error) {
+      next(error);
+    }
+  };
+
   return {
     getProfile,
-    updateProfile
+    updateProfile,
+    addAddress,
+    removeAddress
   };
 };
 
