# src/api/routes/customer.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const CustomerControllerFactory = require("../controllers/customer-controller");
-const { validateUpdateProfile } = require("../validators/customer-validator");
+const { validateUpdateProfile, validateAddress, validateAddressId } = require("../validators/customer-validator");
 
 module.exports = function (customerService, verifyToken) {
   const router = express.Router();
@@ -8,6 +8,8 @@ module.exports = function (customerService, verifyToken) {
 
   router.get("/profile", verifyToken, customerController.getProfile);
   router.put("/profile", verifyToken, validateUpdateProfile, customerController.updateProfile);
+  router.post("/address", verifyToken, validateAddress, customerController.addAddress);
+  router.delete("/address/:addressId", verifyToken, validateAddressId, customerController.removeAddress);
 
   return router;
 };
